# microscopio

./: .gitignore  LICENSE  README.md  notes.md
aoldaq/: .gitignore  CMakeLists.txt  LIBRARIES.md  README.md  compile_commands.json
aoldaq/include/: aoldaq.h
aoldaq/include/aoldaq/: aoldaq.h
aoldaq/src/: aoldaq.c  aoldaq_core.c  aoldaq_core.h  fpga.c  fpga.h  os_pipe.h  os_pipe_unix.c  os_pipe_win32.c
aoldaq_matlab/: AOLDAQ.m  AcquisitionMode.m  ImagingMode.m  aoldaq.h  aoldaq.old.h  bindings.m  test_bindings.m  use_nifpga.h
aoldaq_mex/: aoldaq_mex.c  htest.m
arch/processes/: Makefile  client  client.c  common.h  server  server.c
arch/threaded/c-client/: client  client.c
arch/threaded/server/: Cargo.toml
arch/threaded/server/src/: lib.rs
glviewer/: CMakeLists.txt  aoldaq  compile_commands.json  quad.fs.glsl
glviewer/build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
glviewer/build_win/aoldaq/: Makefile  cmake_install.cmake
glviewer/build_win/msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glviewer.sln  glviewer.vcxproj  glviewer.vcxproj.filters  quad.vs.glsl
glviewer/build_win/msvc/aoldaq/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  aoldaq.sln  aoldaq.vcxproj  aoldaq_static.vcxproj  aoldaq_static.vcxproj.filters  cmake_install.cmake
glviewer/build_win/msvc/aoldaq/aoldaq.dir/Debug/aoldaq.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  aoldaq.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
glviewer/build_win/msvc/aoldaq/aoldaq_static.dir/Debug/: aoldaq_static.vcxproj.FileListAbsolute.txt
glviewer/build_win/msvc/aoldaq/aoldaq_static.dir/Debug/aoldaq_static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
glviewer/build_win/msvc/glviewer.dir/Debug/glviewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
glviewer/build_win/msvc/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
glviewer/build_win/msvc/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
glviewer/src/: main.c  main.c.cli  main.c.gl  shader.c  shader.h  texture.c  texture.h  util.c  util.h  vao.c  vao.h
learning/mex/: mextext.c
learning/producer-consumer/: README.md  benchmark.py
learning/producer-consumer/pc-c-pipes/: Makefile  README.md  main  main.c
learning/producer-consumer/pc-rs/: Cargo.toml
learning/producer-consumer/pc-rs/src/: crossbeam.rs  main.rs  vanilla.rs
nifpga_shim/: NiFpga.h  NiFpga_Proxy.c  NiFpga_shim.c  generate.py  generate_proxy.py
