[package]
name = "server"
version = "0.1.0"
authors = ["Edu Renesto <edure95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.4.4"
lazy_static = "1.4.0"
